--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-imask": "^7.6.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "vite-plugin-fs": "^1.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
